Update create_model.ipynb - changed sklearn to scikit-learn

--- a/models/create_model.ipynb
+++ b/models/create_model.ipynb
@@ -107,24 +107,24 @@
     "import re\n",
     "\n",
     "# Import our text vectorizers\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from scikit-learn.feature_extraction.text import CountVectorizer\n",
+    "from scikit-learn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "\n",
     "# Import our classifiers\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from scikit-learn.naive_bayes import MultinomialNB\n",
+    "from scikit-learn.ensemble import RandomForestClassifier\n",
     "\n",
     "\n",
     "# Import some ML helper function\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import plot_confusion_matrix\n",
-    "from sklearn.metrics import classification_report\n",
+    "from scikit-learn.model_selection import train_test_split\n",
+    "from scikit-learn.metrics import plot_confusion_matrix\n",
+    "from scikit-learn.metrics import classification_report\n",
     "\n",
     "\n",
     "\n",
     "# Import our metrics to evaluate our model\n",
-    "from sklearn import metrics\n",
+    "from scikit-learn import metrics\n",
     "\n",
     "\n",
     "# Library for plotting\n",
