--- a/models/create_model.ipynb
+++ b/models/create_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "51c06b0a",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,9 @@
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\yusse\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\yusse\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n",
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\yusse\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
@@ -83,8 +86,18 @@
       "6333    addis ababa ethiopia president obama convened ...\n",
       "6334    jeb bush suddenly attacking trump heres matter...\n",
       "Name: article_clean, Length: 6335, dtype: object\n",
-      "(5068, 79241) <class 'numpy.ndarray'>\n",
-      "79241 79241\n"
+      "(5068, 79241) <class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'TfidfVectorizer' object has no attribute 'get_feature_names'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 152\u001b[0m\n\u001b[0;32m    148\u001b[0m X_test \u001b[38;5;241m=\u001b[39m vectorizer\u001b[38;5;241m.\u001b[39mtransform(X_test)\n\u001b[0;32m    150\u001b[0m \u001b[38;5;28mprint\u001b[39m(X_train\u001b[38;5;241m.\u001b[39mshape, \u001b[38;5;28mtype\u001b[39m(X))\n\u001b[1;32m--> 152\u001b[0m title_clean \u001b[38;5;241m=\u001b[39m vectorizer\u001b[38;5;241m.\u001b[39mget_feature_names()\n\u001b[0;32m    153\u001b[0m label \u001b[38;5;241m=\u001b[39m vectorizer\u001b[38;5;241m.\u001b[39midf_\n\u001b[0;32m    155\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(title_clean), \u001b[38;5;28mlen\u001b[39m(label))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TfidfVectorizer' object has no attribute 'get_feature_names'"
      ]
     }
    ],
@@ -118,7 +131,7 @@
     "\n",
     "# Import some ML helper function\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import plot_confusion_matrix\n",
+    "\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "\n",
@@ -134,6 +147,7 @@
     "# You may need to download these from nltk\n",
     "nltk.download('stopwords')\n",
     "nltk.download('punkt')\n",
+    "nltk.download('punkt_tab')\n",
     "nltk.download('wordnet')\n",
     "stopwords = stopwords.words('english')\n",
     "\n",
@@ -260,8 +274,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0777ec67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hasattr(vectorizer, 'vocabulary_'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a30bab4c-288c-4301-82f0-381f5e368bc2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -283,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.7"
   },
   "vscode": {
    "interpreter": {
